@@ -26,7 +26,7 @@
   <parent>
     <groupId>com.runwaysdk</groupId>
     <artifactId>runwaysdk-root</artifactId>
-    <version>2.0.8-SNAPSHOT</version>
+    <version>2.0.16-SNAPSHOT</version>
   </parent>
 
   <artifactId>runwaysdk-test</artifactId>
@@ -247,7 +247,7 @@
           <goal>test</goal>
         </goals>
         <configuration>
-          <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m</argLine>
+          <forkCount>0</forkCount> <!-- Forking consumes twice the memory on the CI box. -->
         </configuration>
       </plugin>
 
